# BifacialSimu

./: .gitattributes  .gitignore  .zenodo.json  030321_BiSim_mono_changed_Ghana.py  Albedo.json  BiSim_main.py  BiSim_main_spectralAlbedo.py  BifacialS_LG_module.py  BifacialS_LG_moduleVarAlbedo.py  BifacialSimu - Verknüpfung.lnk  BifacialSimu_main.py  BifacialSimu_main_spectralAlbedo.py  BifacialSimu_spectralAlbedoHandler_Test.py  Dataframe_df_Cologne.csv  GUI.py  GUI_Cologne.py  GUI_Golden.py  LICENSE  MANIFEST.in  Measurement_Albedo.csv  Quartz_GDS74_BECKr_Wavelenght_Reflectivity_edit_csv.csv  README-v1.md  README.md  Readme.md  Test.py  TestFile.py  __init__.py  globals.py  hourly_GHI_DHI_DNI.csv  mainBifacialSimu.py  minute_to_hourly_radiation.py  minute_zenith.py  paper.bib  paper.md  plot_spectrl2_fig51A.py  plot_spectrl2_fig51A_Original.py  requirements.txt  setup.cfg  setup.py  spectralAlbedoHandler.py  (+3 more)
Archiv/: 030321_BiSim_mono_changed_Ghana_variable - Kopie.py  090621_finalZusammenführung.py  180521_Zusammenführung.py  BiSim_main_NREL.py  BiSim_main_lemgo.py  GUI_Cologne.py  GUI_Golden.py
BifacialSimu/: __init__.py
BifacialSimu.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
BifacialSimu_src/: BifacialSimu_main.py  GUI.py  Soiling109.csv  Soiling232.csv  __init__.py  _version.py  globals.py  test_function.py
Data_conversion/: 10minute_Flughafen.csv  10minute_to_minute_radiation.py  15minute_to_hourly_albedo.py  Measurement_Albedo.csv  Measurement_GHI_DHI_DNI.csv  hourly_Albedo.csv  hourly_GHI_DHI_DNI.csv  minute_GHI_DHI.csv  minute_to_hourly_albedo.py  (+1 more)
(+891 files in other folders)
