[project]
name = BifacialSimu
description = Holistic Simulation of large-scale Bifacial Photovoltaic Systems
long_description = {file = "Readme.md"}
requires-python = ">=3.7"
url = https://github.com/cire-thk/BifacialSimu
authors = [{email = "Eva-Maria.Grommes@th-koeln.de"}, {name = "Eva-Maria Grommes"}]
author_email = Eva-Maria.Grommes@th-koeln.de
license = {file = "LICENSE"}
#platforms = any
classifiers = [
  "Development Status :: 1 - Beta",
  "Programming Language :: Python",
  "Development Status :: 1 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering"]

[project.urls]
Bug Tracker = https://github.com/cire-thk/BifacialSimu/issues
Source Code = https://github.com/cire-thk/BifacialSimu


[build-system]
requires = ["setuptools>=42", "versioneer-518"]
build-backend = "setuptools.build_meta"

[versioneer]
VCS = git
style = pep440
versionfile_source = BifacialSimu_src/_version.py
versionfile_build = BifacialSimu_src/_version.py
tag_prefix = Bifacialsimu-
parentdir_prefix = Bifacialsimu-

[aliases]
test=unittest